<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="edu.scut.submarinerobotcontroller.ui.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/bluetooth_working"
            android:visibility="@{data.bluetoothWorkingProgressVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminateTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/bluetooth_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@{data.bluetoothStateText}" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bluetooth_state"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/btn_start_control_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{data.startControllerActivityBtnEnable}"
                    android:onClick="startControllerActivity"
                    android:text="@string/button_controller" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="manualRequestPermission"
                    android:text="@string/button_permission" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="manualConnectBluetooth"
                    android:text="@string/button_bluetooth" />

                <ProgressBar
                    android:id="@+id/train_progress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progress="@{data.trainingProgress}" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
            android:id="@+id/main_coordinatorlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

        </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>